--- a/Instagrid/View/Base.lproj/Main.storyboard
+++ b/Instagrid/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="landscape" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -21,11 +21,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PhotoGridViewController" customModule="Instagrid" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text=" Instagrid" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oO5-60-R2K">
-                                <rect key="frame" x="236" y="10" width="96.5" height="30"/>
+                                <rect key="frame" x="91" y="20" width="138.5" height="43"/>
                                 <accessibility key="accessibilityConfiguration" identifier="instagridLabel"/>
                                 <fontDescription key="fontDescription" name="ThirstySoftRegular" family="Thirsty Soft" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -35,7 +35,7 @@
                                 </variation>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nmx-BP-vp0">
-                                <rect key="frame" x="174" y="50" width="220" height="220"/>
+                                <rect key="frame" x="50" y="174" width="220" height="220"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Bo-qi-QZX">
                                         <rect key="frame" x="10" y="10" width="200" height="200"/>
@@ -60,49 +60,49 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GTt-OS-YRg" userLabel="Stack View Layout">
-                                <rect key="frame" x="500.5" y="50" width="47.5" height="220"/>
+                                <rect key="frame" x="22" y="494" width="276" height="54"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 1" translatesAutoresizingMaskIntoConstraints="NO" id="vL5-Z1-gCu">
-                                        <rect key="frame" x="0.0" y="0.0" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layout1"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="vL5-Z1-gCu" secondAttribute="height" multiplier="1:1" id="hRi-Pj-vbf"/>
-                                        </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 2" translatesAutoresizingMaskIntoConstraints="NO" id="8rv-VP-sq6">
-                                        <rect key="frame" x="0.0" y="57.5" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="74" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layout2"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 3" translatesAutoresizingMaskIntoConstraints="NO" id="flC-Ix-lCt">
-                                        <rect key="frame" x="0.0" y="115" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="148" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layout3"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 4" translatesAutoresizingMaskIntoConstraints="NO" id="fSy-ZX-4y3">
-                                        <rect key="frame" x="0.0" y="172.5" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="222" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layout4"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="fSy-ZX-4y3" secondAttribute="height" multiplier="1:1" id="in7-KY-atI"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <variation key="heightClass=regular" axis="horizontal" spacing="20"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-fH-4oq" userLabel="Stack View Button">
-                                <rect key="frame" x="500.5" y="50" width="47.5" height="220"/>
+                                <rect key="frame" x="22" y="494" width="276" height="54"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wvr-kZ-kua">
-                                        <rect key="frame" x="0.0" y="0.0" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layoutButton1"/>
                                         <connections>
                                             <action selector="didTapOnLayoutButtonWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HIy-uZ-fj6"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmX-Cb-awc">
-                                        <rect key="frame" x="0.0" y="57.5" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="74" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layoutButton2"/>
                                         <connections>
                                             <action selector="didTapOnLayoutButtonWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L7X-bx-OY2"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRV-wa-r2D">
-                                        <rect key="frame" x="0.0" y="115" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="148" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layoutButton3"/>
                                         <state key="normal">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -112,7 +112,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G5f-FR-uCi">
-                                        <rect key="frame" x="0.0" y="172.5" width="47.5" height="47.5"/>
+                                        <rect key="frame" x="222" y="0.0" width="54" height="54"/>
                                         <accessibility key="accessibilityConfiguration" identifier="layoutButton4"/>
                                         <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
@@ -124,18 +124,18 @@
                                 <variation key="heightClass=regular" axis="horizontal"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="HkX-eY-S2U" userLabel="Stack View Swipe">
-                                <rect key="frame" x="20" y="139" width="139" height="42.5"/>
+                                <rect key="frame" x="86" y="111" width="148" height="48"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Arrow Up" translatesAutoresizingMaskIntoConstraints="NO" id="rmH-nu-Anr">
-                                        <rect key="frame" x="64.5" y="0.0" width="10" height="10"/>
+                                        <rect key="frame" x="68" y="0.0" width="12" height="12"/>
                                         <accessibility key="accessibilityConfiguration" identifier="arrowImageView"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="10" id="MH4-0u-pPN"/>
+                                            <constraint firstAttribute="width" constant="12" id="MH4-0u-pPN"/>
                                             <constraint firstAttribute="width" secondItem="rmH-nu-Anr" secondAttribute="height" multiplier="1:1" id="Vhn-ot-igI"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lR-Gk-k9I">
-                                        <rect key="frame" x="5" y="19" width="129.5" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="21" width="148" height="27"/>
                                         <accessibility key="accessibilityConfiguration" identifier="swipeToShareLabel"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -302,7 +302,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Arrow Up" width="4.5" height="3.5"/>
+        <image name="Arrow Up" width="8" height="6"/>
         <image name="Layout 1" width="27" height="27"/>
         <image name="Layout 2" width="27" height="27"/>
         <image name="Layout 3" width="27" height="27"/>
